k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sshauth
  namespace: applications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sshauth
  template:
    metadata:
      labels:
        app: sshauth
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: phpmyadmin
        image: phpmyadmin/phpmyadmin:4.9
      - name: sshauth
        image: docker-registry.example.com/sshauth
        volumeMounts:
        - name: sshauth
          mountPath: /usr/share/nginx/html/index.php
          subPath: index.php
      - name: nginx
        image: nginx:alpine
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: sshauth
          mountPath: /usr/share/nginx/html/index.php
          subPath: index.php
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
          items:
          - key: nginx.conf
            path: nginx.conf
      - name: sshauth
        configMap:
          name: sshauth
          items:
          - key: index.php
            path: index.php
