k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sshauth
  namespace: applications
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: sshauth
